traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: identifier expected but 'def' found.
override def run(def fonce(){while (!isFacingWall) {forward()}}                                              def ok {brushDown()
                 ^Snake:5: error: ':' expected but '}' found.
}
^